--- a/pac_settings.yml
+++ b/pac_settings.yml
@@ -3,6 +3,7 @@
 
 :templates:
   - { location: /data/pac-templates/minimal.md, output: minimal-report.md }
+  - { location: /data/pac-templates/html-minimal.html, output: html-minimal.html }
 
 :task_systems:
   -
