--- a/pac_settings.yml
+++ b/pac_settings.yml
@@ -3,7 +3,7 @@
 
 :templates:
   - { location: /data/pac-templates/minimal.md, output: minimal-report.md }
-  - { location: /data/pac-templates/html-minimal.html, output: html-minimal.html }
+  - { location: /data/pac-templates/html-minimal.html, output: html-minimal.html , pdf: true}
 
 :task_systems:
   -
