TODO-1 Demonstrate how to use labels

--- a/pac_settings.yml
+++ b/pac_settings.yml
@@ -10,6 +10,7 @@
     :name: none
     :regex:
       - { pattern: '/(PAC-\d+)/', label: none }
+      - { pattern: '/(TODO-\d+)/', label: todo }
 
 :vcs:
   :type: git
