FAS-2 Added debug. This should also output data found in FAS-1

--- a/pac_settings.yml
+++ b/pac_settings.yml
@@ -14,6 +14,7 @@
       - { pattern: '/(TODO-\d+)/', label: todo }
   -
     :name: jira
+    :debug: true
     :regex:
       - { pattern: '/(FAS-\d+)/', label: jira }        
     :query_string: "http://localhost:28080/rest/api/latest/issue/#{task_id}"
